--- a/css-no-valido.css
+++ b/css-no-valido.css
@@ -1,17 +1,17 @@
-<!-- Esto es un CSS no válido -->
+<!-- Esto es un css no válido -->
 
  <!--[if IE]>
       <link rel="stylesheet" href="css/ie.css" type="text/css"/>
  <![endif]-->
 
- #yee-1901 {}
- .button-green {}
- .clear {}
- #navigation {}
- .atr {}
+ .login {}
+ .alt {}
+ .video {}
+ .nav {}
+ .aux {}
 
- ul#example {}
- div.error {}
+ .example {}
+ .error {}
 
  .error_status {
  border-top-style: none;
@@ -23,20 +23,22 @@
  padding-right: 1em;
  padding-top: 0;
  }
- .demoimage {margin: 0px;
- padding: 1 1 0px;
+ .demo-image {margin: 0px;
+ padding: 0px;
  font-size: 0.8em;
- olor: #eebbcc;}
+ color: #eebbcc;}
 
+ .formato{
+  background: fuchsia;
+border: 1px solid;
+-moz-border-radius: 4px;
+-webkit-border-radius: 4px;
+border-radius: 4px;
+color: black;
+text-align: center;
+text-indent: 2em;
+ }
 
- -moz-border-radius: 4px;
- -webkit-border-radius: 4px;
- background: fuchsia;
- border: 1px solid;
- text-align: center;
- text-indent: 2em;
- border-radius: 4px;
- color: black;
 
    h1 {
      background: #fff;
@@ -45,47 +47,48 @@
 
  .test {
    display: block;
-   height: 100px
+   height: 100px;
  }
 
  h3 {
-   font-weight:bold;
+  font-weight: bold;
  }
 
- #video{
-   margin-top: 1em;
+ .video {
+  margin-top: 1em;
  }
 
- #video
- {
-   margin-top: 1em;
+ .video {
+  margin-top: 1em;
  }
 
- a:focus, a:active {
-   position: relative; top: 1px;
+ a:focus,
+ a:active {
+   position: relative;
+   top: 1px;
  }
 
  html {
-   background: #fff;
+  background: #fff;
  }
  body {
    margin: auto;
    width: 50%;
  }
 
- @import url("https://www.google.com/css/maia.css");
+ @import url(https://www.google.com/css/maia.css);
 
  html {
-   font-family: "open sans", arial, sans-serif;
+   font-family: 'open sans', arial, sans-serif;
  }
 
  /* Header */
 
- #adw-header {}
+ .adw-header {}
 
  /* Footer */
 
- #adw-footer {}
+ .adw-footer {}
 
  /* Gallery */
 
